--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -4,5 +4,6 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "TokenKey": "Super duper secret key here at your service for your service. I honetly don't know what to write here. This is just a test."
 }
